--- a/src/00-introduccion.html
+++ b/src/00-introduccion.html
@@ -12,10 +12,10 @@
       sus primeros años de experiencia en patrulla, acantonamientos y
       campamentos, el/la explorador/a reconoce su lugar dentro del Batallón y
       comienza a madurar con una visión más amplia el estilo de vida que -como
-      camino- le propone el Movimiento Exploradoril.
+      caminole propone el Movimiento Exploradoril.
     </p>
     <p>
-      Consolidar signiﬁca aﬁrmar nuestra espiritualidad exploradoril. Esto
+      Consolidar significa afirmar nuestra espiritualidad exploradoril. Esto
       implica que debmos madurar, crecer, cambiar. Ya no sólo vamos a
       preocuparnos por hacer bien las cosas que debemos hacer, sino por comenzar
       a descubrir cuál es el proyecto que Dios ha soñado para cada uno y cómo
@@ -107,7 +107,7 @@
     <p>
       Con una Comisión Nacional, conformada por el C.E.N. e integrantes de
       diferentes zonas, se inicia la elaboración del libro en marzo del 2015; en
-      marco a los festejos del Bicentena- rio del nacimiento de Don Bosco y
+      marco a los festejos del Bicentenario del nacimiento de Don Bosco y
       Centenario del Movimiento Exploradoril.
     </p>
     <p>
@@ -121,7 +121,7 @@
     <p>
       En función de ambas evaluaciones, y del intercambio y diálogo con las
       realidades, el equipo comienza a desarrollar, reﬂexionar en el armado de
-      nuevas consignas actualizan- do los ya existentes.
+      nuevas consignas actualizando los ya existentes.
     </p>
     <p>
       Asimismo, se elaboran ejes transversales que otorgan una mirada integral
@@ -167,11 +167,11 @@
       pensando de esta manera consignas que nos inviten a ir más allá del mundo
       exploradoril. Se aspira a construir una mirada amplia, pero para eso será
       necesario dejarnos cuestionar como animadores, dejarnos interpelar por las
-      realidades con la intención de construir concimientos signiﬁcativos que
+      realidades con la intención de construir concimientos significativos que
       inviten a ampliar la mirada de los adolescentes y jóvenes respondiendo a
       nuestra misión como Movimiento de colaborar en la formación de buenos
       cristianos y honrados ciudadanos comprometidos como parte de la Iglesia en
-      la construc- ción de un mundo mejor.
+      la construcción de un mundo mejor.
     </p>
     <p>
       Por último, creemos que la mayor riqueza que le aporta este libro a sus
@@ -235,7 +235,7 @@
         </td>
         <th>
           <strong>LUGARES y TIEMPOS</strong><br />
-          (de pertenencia, de re- ferencia, de encuentro)
+          (de pertenencia, de referencia, de encuentro)
         </th>
       </tr>
       <tr>
@@ -309,7 +309,7 @@
         <td>
           <strong>Comisión</strong> <br />Germán Casas (Almagro)<br />
           Laura Jimenez (San Justo)<br />
-          Martín Caﬁero (Congreso)<br />
+          Martín Cafiero (Congreso)<br />
           Pamela Merino (Córdoba)<br />
         </td>
         <td>
@@ -339,7 +339,7 @@
       mirada constructivista del conocimiento donde el aprendizaje es un proceso
       que se da de forma individual y a lo largo de procsos vitales.
       Consideramos que los Rastreadores y Hogueras, junto a sus animadores de
-      patrulla, pueden ir signiﬁcando y resigniﬁcando en el día a día la
+      patrulla, pueden ir significando y resignificando en el día a día la
       construcción del su ser explorador desde una perspectiva moral que sea
       propositiva de un estilo de vida capaz despertar valores que den sentido a
       la propia existencia a partir de ejemplos concretos como son el
@@ -355,11 +355,11 @@
         La persona al centro de todo: el movimiento tiene presentes los
         problemas y las esperanzas de las nuevas situaciones del mundo juvenil
         actual. Esta actitud se dirige a las necesidades de la persona antes que
-        al cumplimiento de imperativos estructura- les. (PP.DD. Art. 35)
+        al cumplimiento de imperativos estructurales. (PP.DD. Art. 35)
       </li>
       <li>
         Respeto por la persona, por su ritmo de crecimiento, maduración y
-        desarrollo, ade- más de la promoción de sus capacidades personales.
+        desarrollo, además de la promoción de sus capacidades personales.
         (PP.DD. Art. 29)
       </li>
       <li>
@@ -369,7 +369,7 @@
       </li>
       <li>
         Comprensión de la complejidad vincular: el desarrollo vital del
-        muchacho/a pasa por momentos deﬁnidos, con características particulares
+        muchacho/a pasa por momentos definidos, con características particulares
         que no pueden dejar de tomarse en cuenta al encarar un proceso
         formativo. (PP.DD. Art. 116)
       </li>
@@ -382,7 +382,7 @@
       <li>
         La vida en comunidad: nuestra espiritualidad reconoce en la vida el
         lugar en el que Dios se hace presente y cercano a cada uno de nosotros,
-        una espiritualidad de lo coti- diano. (PP.DD. Art. 62)
+        una espiritualidad de lo cotidiano. (PP.DD. Art. 62)
       </li>
       <li>
         La lógica de procesos: “Descubrir haciendo”, de manera que a través de
@@ -398,7 +398,7 @@
       </li>
     </ul>
     <p>
-      Esperamos que este libro sea una herramienta signiﬁcativa en el proceso
+      Esperamos que este libro sea una herramienta significativa en el proceso
       educativo no solo de los rastreadores y hogueras sino que también pueda
       acompañar los momentos de formación de los jóvenes animadores.
     </p>
@@ -409,11 +409,11 @@
     </p>
     <p>
       La experiencia del agua forma parte de una serie de experiencias
-      exploradoriles profun- das, de acuerdo a cada meta parcial.
+      exploradoriles profundas, de acuerdo a cada meta parcial.
     </p>
     <p>
       El objetivo de la meta Rastreadores-Hogueras es CONSOLIDAR EL CAMINO
-      exploradoril, recuperando el trayecto recorrido e identiﬁcándose con la
+      exploradoril, recuperando el trayecto recorrido e identificándose con la
       Iglesia, los valores y el lugar activo que cada explorador tiene en su
       vida y en su comunidad.
     </p>
@@ -423,13 +423,13 @@
     </p>
     <p>
       Junto a los Rastreadores-Hogueras, trataremos de descubrir la gran
-      variedad de servcios que nos presenta el agua como tal, puriﬁca, da vida,
+      variedad de servcios que nos presenta el agua como tal, purifica, da vida,
       refresca, sacia, empuja, tranparenta. etc., y se relacionará con la
       capacidad de transformación que el encuentro con Cristo tiene en nuestras
       vidas, logrando convertir nuestros corazones para que nada falta y todo se
       llene de alegría. Como en las Bodas de Caná, acompañar la maduración de
       los Rastreadores – Hogueras y sus animadores para que el agua de la vida
-      se deje transfor- mar por Jesús en el vino de la entrega.
+      se deje transformar por Jesús en el vino de la entrega.
     </p>
     <table>
       <tr>
@@ -439,14 +439,14 @@
         <th><strong>Objetivo: Los Rastreadores-Hogueras...</strong></th>
       </tr>
       <tr>
-        <td><strong>1. Conﬁanza</strong></td>
+        <td><strong>1. Confianza</strong></td>
         <td>Amistad</td>
         <td>Lugares-Tiempos</td>
         <td>
-          … lograron tomar conciencia que la conﬁanza mutua es un elemento
+          … lograron tomar conciencia que la confianza mutua es un elemento
           esencial para fortalecer la unión del grupo. <br />… actuaron con
-          transparencia en todo momento para que los demás les tengan conﬁanza.
-          Lograron sentirse con conﬁanza en su grupo.
+          transparencia en todo momento para que los demás les tengan confianza.
+          Lograron sentirse con confianza en su grupo.
         </td>
       </tr>
       <tr>
@@ -456,7 +456,7 @@
         <td>
           ... lograron descubrir la importancia del compartir para pder convivir
           como grupo. <br />… pudieron compartir cosas, momentos, alegrías y
-          dﬁcultades que unieron al grupo, tuvieron gestos de ge- nerosidad y
+          dficultades que unieron al grupo, tuvieron gestos de generosidad y
           apertura con otras personas y situaciones.
         </td>
       </tr>
@@ -470,7 +470,7 @@
           relaciones sexuales dentro del marco del amor verdadero, considerando
           el ser responsable con su cuerpo, afectos y toda su sxualidad.<br />…
           aprendieron a expresar su afecto, sentimientos, midos, emociones,
-          vivencias entre sus compañeros, ami- gos y familiares.
+          vivencias entre sus compañeros, amigos y familiares.
         </td>
       </tr>
       <tr>
@@ -534,9 +534,9 @@
           sexualidad en el marco de la construción por la vida. <br />… lograron
           tomar conciencia de la necesidad de crecer armónicamente, descubriendo
           una forma de relacinarse con el mundo que transforma sus vínculos,
-          copartiendo las diﬁcultades del crecimiento con el grupo. <br />…
+          copartiendo las dificultades del crecimiento con el grupo. <br />…
           reﬂexionaron sobre dejar de actuar como niños o niñas y superar el
-          miedo y las diﬁcultades propias al crecimieto, aceptando los cambios
+          miedo y las dificultades propias al crecimieto, aceptando los cambios
           en la sexualidad integrándola a toda su persona.
         </td>
       </tr>
@@ -564,7 +564,7 @@
           pero que todas las personas tienen la misma dignidad y merecen
           respeto. <br />… reﬂexionaron acerca de la importancia de poder
           ubcarse contextualmente y relacionarse con respeto a los demás.<br />…
-          reconocieron la relevancia de no discriminar, ni ha- cer diferencias
+          reconocieron la relevancia de no discriminar, ni hacer diferencias
           con sus compañeros y otras personas.
         </td>
       </tr>
@@ -590,7 +590,7 @@
           concepciones. <br />… pudieron incorporar la necesidad de tener una fe
           bsada en obras, que brinda respuestas a sus vidas y los mueve a actuar
           en consecuencia. <br />… comenzaron a vivir la fe desde un compromiso
-          con- creto y coherente reconociendo a Dios en lo cotidiano.
+          concreto y coherente reconociendo a Dios en lo cotidiano.
         </td>
       </tr>
       <tr>
@@ -614,7 +614,7 @@
           abierta a pensar la realidad en términos complejos. <br />…
           comprendieron que la comunicación, la escucha de nuevas opiniones es
           necesaria para no dejarse llevar por la corriente de las modas,
-          descubrir al otro y ha- cerse conocer.
+          descubrir al otro y hacerse conocer.
         </td>
       </tr>
       <tr>
@@ -623,9 +623,9 @@
         <td>Identidad</td>
         <td>
           ... reﬂexionaron sobre que el desarrollo de una pesonalidad madura
-          requiere una identiﬁcación sexual constituida, integrada y aceptada,
+          requiere una identificación sexual constituida, integrada y aceptada,
           con dos caminos posibles: ser varones o mujeres, y que integrar la
-          sxualidad conforma una parte fundamental de la iden- tidad personal.
+          sxualidad conforma una parte fundamental de la identidad personal.
         </td>
       </tr>
       <tr>
@@ -652,8 +652,8 @@
           que tienen. <br />… se aproximaron a entender que la solidaridad no
           pasa sólo por el asistencialismo sino por la promisión integral de la
           persona. <br />…reﬂexionaron sobre la actitud solidaria frente a las
-          necesidades que hay a su alrededor mediante una ac- ción concreta y
-          oración eﬁcaz.
+          necesidades que hay a su alrededor mediante una acción concreta y
+          oración eficaz.
         </td>
       </tr>
       <tr>
@@ -661,7 +661,7 @@
         <td>Proyecto de vida</td>
         <td>Identidad</td>
         <td>
-          … entendieron que ser santo, signiﬁca ser “distingudo”, “destacado” y
+          … entendieron que ser santo, significa ser “distingudo”, “destacado” y
           que todos están llamados a distiguirse de la mediocridad. <br />…
           lograron descubrir en la vida de los santos un ejeplo a seguir
           posible, atractivo, concreto, novedoso que los llama a ser felices
@@ -689,7 +689,7 @@
         </td>
       </tr>
       <tr>
-        <td><strong>20. Correspon- sabilidad</strong></td>
+        <td><strong>20. Corresponsabilidad</strong></td>
         <td>Familia</td>
         <td>Lugares-Tiempos</td>
         <td>
@@ -725,7 +725,7 @@
           ... lograron valorar la vida propia y la de los demás, etendiéndola
           como lo más grande que Dios les regaló. <br />… adoptaron la capacidad
           de distinguir entre los hchos de vida y muerte que aparecen en su
-          realidad co- tidiana.
+          realidad cotidiana.
         </td>
       </tr>
       <tr>
@@ -734,7 +734,7 @@
         <td>Lugares-Tiempos</td>
         <td>
           ... comprendieron el mensaje de esperanza del Reino de Dios que ya se
-          está construyendo y del cual forma parte.<br />… lograron identiﬁcarse
+          está construyendo y del cual forma parte.<br />… lograron identificarse
           con un proyecto grupal que se construye paso a paso, aprendiendo a no
           pretender todo de golpe ni detener sus esfuerzos.
         </td>
@@ -752,13 +752,13 @@
         </td>
       </tr>
       <tr>
-        <td><strong>25. Experien- cia del agua</strong></td>
+        <td><strong>25. Experiencia del agua</strong></td>
         <td>Proyecto de vida</td>
         <td>Experiencias religiosas</td>
         <td>
           … lograron vivir la experiencia del agua con alegría, a modo de cierre
           de la etapa, siendo conscientes que con ella renovaban su promesa
-          bautismal. <br />… identiﬁcaron el agua como signo y elemento central
+          bautismal. <br />… identificaron el agua como signo y elemento central
           de la experiencia reconociendo sus características y buscando el modo
           de llevar a la práctica esas caractrísticas para transformarse y
           transformar la realidad, con el fundamento de ser y no aparentar.
@@ -793,7 +793,7 @@
     </p>
     <p>
       Luego de haber recorrido la etapa de ambientación, su compromiso e interés
-      por el ex- ploradorismo es una llama que no sólo se mantendrá encendida
+      por el exploradorismo es una llama que no sólo se mantendrá encendida
       con un acompañamiento integral del grupo y comunidad, sino además con una
       formación que lo ayude a encontrar respuestas en este momento de búsqueda
       de certezas. Tenemos en nuestras manos la posibilidad de consolidar el
@@ -817,10 +817,10 @@
       realidad de la patrulla que debe ser observada y evaluada por el/la
       animador/a.
     </p>
-    <p>Para seleccionar la consigna deberás primero identiﬁcarla.</p>
+    <p>Para seleccionar la consigna deberás primero identificarla.</p>
     <h3>1) TEMA</h3>
     <p>
-      Junto con el nombre de la consigna ﬁguran los ejes transversales que dan
+      Junto con el nombre de la consigna figuran los ejes transversales que dan
       sentido intgral a ese tema y el o los PP.DD. que nos otorgan un marco
       desde nuestro MES y carisma. Este apartado es muy importante ya que nos
       permite ir descubriendo los fundamentos que subyacen nuestro movimiento y
@@ -828,7 +828,7 @@
       formación.
     </p>
     <p>
-      Una vez identiﬁcada la consigna por su nombre y tema, proponemos, mediante
+      Una vez identificada la consigna por su nombre y tema, proponemos, mediante
       diversas técnicas y ejercicios prácticos evaluar si es conveniente
       desarrollarla en este momento. Preguntarnos ¿Por qué elegimos esta
       consigna? ¿Cuáles creemos que son las necesidades de nuestro grupo?
@@ -852,18 +852,18 @@
     <h3>3) “ENTENDIÉNDOLOS”</h3>
     <p>
       En este espacio queremos ayudarte a “comprender” más aun a tus
-      Rastreadores-Hogue- ras, con un enfoque del contenido desde la psicología,
+      Rastreadores-Hogueras, con un enfoque del contenido desde la psicología,
       psicopedagía etc.
     </p>
     <p>
       Este momento es el que contempla la diversidad de contextos y la situación
-      especíﬁca del adolescente. Es un instrumento concreto para entender mejor
+      específica del adolescente. Es un instrumento concreto para entender mejor
       al niño/a de 14/15 años.
     </p>
     <h3>4) “OBJETIVOS CUMPLIDOS”</h3>
     <p>Los objetivos generales los van a proponer las consignas.</p>
     <p>
-      El especíﬁco lo establecerán los animadores de Rastreadores-Hogueras,
+      El específico lo establecerán los animadores de Rastreadores-Hogueras,
       respetando la diversidad y la situación particular del grupo. A partir de
       los emergentes grupales, es dcir, aquello que les interesa profundizar en
       la relación de los Rastreadores-Hogueras. ¿En qué situación real
@@ -871,7 +871,7 @@
     </p>
     <p>
       El objetivo está expresado en pasado como algo que ya sucedió, de manera
-      que el im- pacto de la acción expresada empuje a cumplirla y permita
+      que el impacto de la acción expresada empuje a cumplirla y permita
       evaluarla.
     </p>
     <h3>5) ACTIVIDADES CENTRALES</h3>
@@ -916,7 +916,7 @@
     </p>
     <p>
       El mate es uno de los “infaltables” de nuestras reuniones, testigo de
-      tantas charlas don- de compartimos nuestra vida y fe.
+      tantas charlas donde compartimos nuestra vida y fe.
     </p>
     <p>
       Por eso proponemos que <strong>el mate</strong> sea el icono que
