--- a/src/01-confianza.html
+++ b/src/01-confianza.html
@@ -77,7 +77,7 @@
       Sales: “Más moscas se cazan con una gota de miel que con un barril de
       vinagre”.
     </p>
-    <h3>- Reﬂexión</h3>
+    <h3>- Reflexión</h3>
     <p>
       La fórmula es más que sencilla pero fundamental: no basta amar, basta que
       se sientan amdos. En esa reciprocidad está la base fundante de la
@@ -103,7 +103,7 @@
         que les pertenece a ustedes?.»</em
       >
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       El Evangelio nos invita a ser fiel en lo poco, en nuestras actitudes
       cotidianas. Si somos dehonestos en nuestras palabras, momentos
@@ -112,7 +112,7 @@
     </p>
     <h2>ENTENDIENDOLOS</h2>
     <p>
-      En general, los Rastreadores- Hogueras, buscan afianzarse en el grupo y
+      En general, los Rastreadores-Hogueras, buscan afianzarse en el grupo y
       profundizar sus amistades. Comienzan a descubrir intereses y vivencias
       comunes que los llevan a relacionarse con los que son más afines. Tienen
       confianza con sus amigos más cercanos pero puede costar abrirse al resto
@@ -124,7 +124,7 @@
     <ul>
       <li>
         Los Rastreadores / Hogueras lograron tomar conciencia que la confianza
-        mutua es un ele- mento esencial para fortalecer la unión del grupo.
+        mutua es un elemento esencial para fortalecer la unión del grupo.
       </li>
       <li>
         Actuaron con transparencia en todo momento para que los demás les tengan
@@ -139,7 +139,7 @@
     <h3>ACTIVIDAD 1: CONSTRUCCIONES CRUZADAS</h3>
 
     <strong>- Orientación:</strong> La actividad busca que el grupo comprenda
-    que la confianza se constru- ye y que son las actitudes lo que hacen al buen
+    que la confianza se construye y que son las actitudes lo que hacen al buen
     clima de grupo.
 
     <h3>- Actividad:</h3>
@@ -162,14 +162,14 @@
       </li>
       <li>
         En algún momento decirles que pasó y que debes irte un tiempo.
-        Encargarles la responsa- bilidad de terminar la construcción (o, para no
+        Encargarles la responsabilidad de terminar la construcción (o, para no
         alejarte del grupo, argumentar que tenés que preparar otra actividad y
         quedarte cerca leyendo algo).
       </li>
       <li>Al retornar plantear la conversación según lo que haya pasado.</li>
       <li>
         Ver si pudieron hacer lo encomendado, si lo terminaron o falta mucho, si
-        surgió algún in- conveniente.
+        surgió algún inconveniente.
       </li>
       <li>
         Cuando la construcción está terminada, intercambiarse con otro grupo,
@@ -192,12 +192,12 @@
         ¿Esperaste que pasara otro antes que vos?
       </li>
     </ol>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       La confianza se construye: La confianza es algo que se va generando con el
       tiempo y en base a las actitudes y acciones de las personas. Puede tomar
       mucho tiempo ganarse la confianza del otro. Con algunas acciones podemos
-      perderla, pero no quiere decir que no podamos recu- perarla siempre y
+      perderla, pero no quiere decir que no podamos recuperarla siempre y
       cuando modifiquemos nuestra actitud.
     </p>
     <p>
@@ -209,16 +209,16 @@
     <p><strong>Clima de confianza en el grupo:</strong></p>
     <p>
       Hay actitudes del grupo que ayudan a que uno tenga confianza y otras que
-      tienen el efecto con- trario. Las risas hacia los demás, cargadas y burlas
+      tienen el efecto contrario. Las risas hacia los demás, cargadas y burlas
       crean desconfianza en el que quiere decir algo.
     </p>
     <p>
       El respeto, palabras de apoyo y gestos de comprensión crean un clima de
-      confianza que per- mite que la persona se exprese libremente.
+      confianza que permite que la persona se exprese libremente.
     </p>
     <p>
       En el grupo la confianza se gana con el testimonio que damos diariamente,
-      acompañando, aconse- jando, sin caer en el “amiguismo” con el cual sólo
+      acompañando, aconsejando, sin caer en el “amiguismo” con el cual sólo
       logramos un alejamiento a la primera dificultad.
     </p>
     <div class="god">
@@ -277,7 +277,7 @@
         igual en esa persona?
       </li>
     </ol>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <em>Animarse a confiar en los demás:</em> La confianza depende de las
       personas. Hay personas a las cuales se le tiene más confianza que a otras,
@@ -381,7 +381,7 @@
         Hogueras es… Por eso, creo que necesito seguir trabajando con ellos en…
       </li>
     </ul>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       Te invitamos a que leas los siguientes extractos de entrevistas al Papa
       Francisco:
