--- a/src/02-compartir.html
+++ b/src/02-compartir.html
@@ -29,7 +29,7 @@
         <strong>24</strong>
         <em
           >Consiste en un clima de afecto correspondido, cuyos elementos
-          esenciales son el aprecio y la conﬁanza recíproca ,que lleva al trato
+          esenciales son el aprecio y la confianza recíproca ,que lleva al trato
           fraternal y a la participación de todos en la vida y en la acción
           comunitaria, apoyados en la razón, el amor y el espíritu de fe que
           crea la libertad de los hĳos de Dios.</em
@@ -59,8 +59,8 @@
     <p>
       Cada uno del grupo tiene problemas distintos, como también son distintos
       los talentos que tenemos, pero tengamos la seguridad que sea cual sea la
-      diﬁcultad, mediante el compartir se la puede llevar adelante. En la medida
-      que el grupo tiene la capacidad de compartir los proble- mas de cada uno
+      dificultad, mediante el compartir se la puede llevar adelante. En la medida
+      que el grupo tiene la capacidad de compartir los problemas de cada uno
       se fortalece su unidad.
     </p>
     <h2>TU MOMENTO</h2>
@@ -73,18 +73,18 @@
         materializado; por tanto hay que trabajar y dar a conocer el bien que se
         hace. Si uno hace hasta milagros rezando día y noche y estándose en su
         celda, el mundo no hace caso y no cree en ello. El mundo necesita ver y
-        tocar” (Memorias Biográﬁcas, XIII, 116).</em
+        tocar” (Memorias Biográficas, XIII, 116).</em
       >
     </p>
-    <h3>- Reﬂexión</h3>
+    <h3>- Reflexión</h3>
     <p>
       El compartir implica necesariamente actuar frente al otro. A medida que
       trabajemos para ello es cuando el mundo va a empezar a “creer”. De nada
-      sirve creer que podemos solos, “encrrados en esta celda”. No es suﬁciente
+      sirve creer que podemos solos, “encrrados en esta celda”. No es suficiente
       solo querer que el otro esté mejor y limitarnos a pedir una y otra vez por
       ello. Es fundamental materializarse, escuchar, dar el hombro. El
       explorador es miembro activo de su Iglesia, de su comunidad, y en nuestro
-      caso del grupo de Rastreado- res-Hogueras.
+      caso del grupo de Rastreadores-Hogueras.
     </p>
     <h2>TEXTO PARA REFLEXIONAR Y ORIENTAR EL TRABAJO</h2>
     <h3>- 2 Corintios, 6-8: El que siembra</h3>
@@ -105,12 +105,12 @@
       <p>
         <em
           >Por otra parte, Dios tiene poder para colmarlos de todos sus dones, a
-          ﬁn de que siempre ten- gan lo que les hace falta, y aún les sobre para
+          fin de que siempre tengan lo que les hace falta, y aún les sobre para
           hacer toda clase de buenas obras».</em
         >
       </p>
     </div>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       Todos tenemos dones que son una pieza clave para la construcción del bien
       común. Queda en nosotros saber compartirlos para alivianarle un poco la
@@ -126,7 +126,7 @@
       pero se les complca al aparecer problemas.
     </p>
     <p>
-      Si bien chicas y varones reaccionan distintos ante las diﬁcultades del
+      Si bien chicas y varones reaccionan distintos ante las dificultades del
       grupo, ambos necesitan espacios, para conversar, compartir y convivir.
     </p>
     <p>
@@ -137,10 +137,10 @@
     <ul>
       <li>
         Los Rastreadores / Hogueras lograron descubrir la importancia del
-        compartir para poder con- vivir como grupo.
+        compartir para poder convivir como grupo.
       </li>
       <li>
-        Pudieron compartir cosas, momentos, alegrías y diﬁcultades que unieron
+        Pudieron compartir cosas, momentos, alegrías y dificultades que unieron
         al grupo, tuvieron gestos de generosidad y apertura con otras personas y
         situaciones.
       </li>
@@ -154,20 +154,20 @@
     <h3>- Orientación:</h3>
     <p>
       La actividad busca que el Rastreador-Hoguera descubra que el compartir en
-      comunidad impli- ca ayudar al otro pero también animarse a ser ayudado.
+      comunidad implica ayudar al otro pero también animarse a ser ayudado.
     </p>
     <h3>- Actividad:</h3>
     <ol>
       <li>Proponer que cada uno haga una cruz de cartón.</li>
       <li>
         Que escriba en ella una “cruz” que tenga hoy en su vida; es decir una
-        diﬁcultad, un temor, una tristeza, un dolor.
+        dificultad, un temor, una tristeza, un dolor.
       </li>
       <li>Hacer una ronda y depositar todas las cruces en el centro.</li>
       <li>
         Indicar que se queden parados y levanten los brazos en forma de cruz (la
         idea es realizar alguna posición que los canse y para nada un castigo
-        físico. Adaptá esta actividad de acuerdo al perﬁl de grupo)
+        físico. Adaptá esta actividad de acuerdo al perfil de grupo)
       </li>
       <li>Mientras tanto leer el cuento “Las cruces” y comentarlo.</li>
     </ol>
@@ -194,7 +194,7 @@
       que de hecho nunca pasó de ser un conjunto de casas que actualmente se
       estaban despoblando. No le costó conseguir permiso para pasar la noche al
       reparo de uno de los grandes galpones de cinc. Allí hizo un fueguito, y en
-      un tarro que oﬁciaba de ollita recalentó el estofado que le habían dado al
+      un tarro que oficiaba de ollita recalentó el estofado que le habían dado al
       mediodía en la estancia dode pasara la mañana. Reconfortado por dentro,
       preparó su cama: un trozo de plástico negro como colchón que evitaba la
       humedad. Encima dos o tres bolsas que llevaba en el mono, más un par de
@@ -244,7 +244,7 @@
       Pero resulta que entre éstas, las había sumamente pesadas de quebracho, y
       otras livianitas de cartón como para que jugaran los gurises. Le dio no sé
       qué elegir una de juguete, y tuvo miedo de corajear una de las pesadas. Se
-      quedó a mitad de camino, y entre las medianas de tamaño preﬁrió una de
+      quedó a mitad de camino, y entre las medianas de tamaño prefirió una de
       peso regular.
     </p>
     <p>
@@ -261,7 +261,7 @@
       hacer bravatas y llevarse una que lo lastimara toda la vida.
     </p>
     <p>
-      Se decidió por ﬁn y tomando de las medianas de tamaño, la que era regular
+      Se decidió por fin y tomando de las medianas de tamaño, la que era regular
       de peso y de terminado, se dirigió a Tata Dios diciéndole que elegía para
       su vida aquella cruz.
     </p>
@@ -272,7 +272,7 @@
       le viniera de nuevo con quejas.
     </p>
     <p>
-      Pero el hombre se aﬁrmó en lo hecho y garantizó que realmente lo había
+      Pero el hombre se afirmó en lo hecho y garantizó que realmente lo había
       pensado muy bien, y que con aquella cruz no habría problemas, que era la
       justa para él, y que no pensaba retirar su decisión. Tata Dios casi
       riéndose le dĳo:
@@ -280,7 +280,7 @@
 
     <p>
       -Ven, amigo. Le voy a decir una cosa. Esa cruz que usted eligió es
-      justamente la que ha vnido llevando hasta el presente. Si se ﬁja bien,
+      justamente la que ha vnido llevando hasta el presente. Si se fija bien,
       tiene sus iniciales y señas. Yo mismo se la he sacado esta noche y no me
       costó mucho traerla, porque ya estaba aquí. Así que de ahora en adelante
       cargue su cruz y sígame, y déjese de protestas, que yo sé bien lo que hago
@@ -293,7 +293,7 @@
     <p>
       A veces se me ocurre pensar que si Dios nos mostrara las cruces que llevan
       los demás, y nos ofreciera cambiar la nuestra, cualquiera de ellas, muy
-      pocos aceptaríamos la oferta. Nos se- guiríamos quejando lo mismo, pero
+      pocos aceptaríamos la oferta. Nos seguiríamos quejando lo mismo, pero
       nos negaríamos a cambiarla. No lo haríamos, ni dormidos.
     </p>
 
@@ -314,7 +314,7 @@
       </li>
       <li>Relacionar con las cruces personales</li>
       <li>
-        Se puede comentar brevemente diﬁcultades personales: <br />¿Alguien
+        Se puede comentar brevemente dificultades personales: <br />¿Alguien
         quiere compartir lo que escribió en su cruz?
       </li>
       <li>
@@ -323,7 +323,7 @@
       </li>
       <li>
         También se puede abordar una situación más general a nivel grupo:
-        <br />¿Qué diﬁcultades vemos en el grupo?
+        <br />¿Qué dificultades vemos en el grupo?
       </li>
       <li>
         Extender el planteo más allá del grupo: <br />¿Qué pasa cuando hay
@@ -332,7 +332,7 @@
         los toca de cerca?
       </li>
     </ol>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       Cada uno tiene su cruz: Dios no exige más de lo que cada uno puede dar. Un
       Dios que coprende la condición humana, que se hizo hombre para compartir
@@ -344,7 +344,7 @@
       que es posible y nos invita a imitarlo.
     </p>
     <p>
-      Compartir las diﬁcultades: son dos las actitudes que van juntas en el
+      Compartir las dificultades: son dos las actitudes que van juntas en el
       grupo - Dejarse ayudar por el amigo compartiendo con él nuestra cruz y el
       estar dispuesto a poner el hombro para que el otro se apoye-.
     </p>
@@ -375,7 +375,7 @@
     <p>
       <strong>- Orientación:</strong> Esta actividad busca que el
       Rastreador-Hoguera, mediante lo lúdico, logre comprender sobre la
-      importancia de la unión del grupo frente a las diﬁcultades. Que es nece-
+      importancia de la unión del grupo frente a las dificultades. Que es nece-
       sario construir juntos en el camino de su vida.
     </p>
     <h3>- Actividad:</h3>
@@ -392,24 +392,24 @@
       </li>
       <li>
         Le pueden poner un nombre al puente e inventar una pequeña historia.
-        ¿Para qué fue cons- truido? ¿Qué es lo que une?
+        ¿Para qué fue construido? ¿Qué es lo que une?
       </li>
       <li>
         Preguntar: ¿Cómo se sintieron a la hora de tener que compartir los
-        materiales? ¿Hubo algu- na diﬁcultad? ¿Todos colaboraron para la
+        materiales? ¿Hubo alguna dificultad? ¿Todos colaboraron para la
         construcción?
       </li>
     </ol>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       La unión frente a los problemas: A veces es el surgimiento de un problema
       y la necesidad de resolverlo lo que le permite a un grupo unirse más. No
-      por eso hay que forzar que surjan pro- blemas sino estar atento cuando
+      por eso hay que forzar que surjan problemas sino estar atento cuando
       aparecen y no dudar de encararlo y resolverlo entre todos.
     </p>
     <p>
       Lo mismo puede pasar a todo nivel. En una familia, un momento difícil
-      (partida de alguien querido, diﬁcultades económicas, de pareja, etc.)
+      (partida de alguien querido, dificultades económicas, de pareja, etc.)
       puede (y debería) ser el punto de partida para salir más fuertes y unidos.
     </p>
     <p>
@@ -442,7 +442,7 @@
       Hay gente alrededor nuestro que está para ayudarnos, desde diferentes
       lugares y diferentes roles. Siempre no vamos a poder completamente solos,
       en momentos va a ser necesario pedir auxilio. Y, lo que también es muy
-      importante, nosotros mismos muchas veces somos de so- porte y ayuda para
+      importante, nosotros mismos muchas veces somos de soporte y ayuda para
       la construcción del puente de otra persona.
     </p>
     <div class="god">
@@ -458,8 +458,8 @@
     <h3><em>La Carpa: Fogón de corazones abiertos</em></h3>
 
     <p>
-      Este momento es ideal para realizar la ﬁnal de una larga jornada como un
-      paseo o campamen- to, pero podes adaptarla al ﬁnal de un día de
+      Este momento es ideal para realizar la final de una larga jornada como un
+      paseo o campamento, pero podes adaptarla al final de un día de
       actividades “común”
     </p>
     <h4>- Se comparte:</h4>
@@ -467,7 +467,7 @@
       Antes de regresar reunirse todos en ronda, en torno a un fuego o rueda de
       canciones,
     </p>
-    <h4>- Se reﬂexiona:</h4>
+    <h4>- Se reflexiona:</h4>
     <p>
       Dar un tiempo para que cada uno comparta y agradezca a Dios y sus
       compañeros lo que vivió en el día de actividades: <br />¿Qué te gustó más?
@@ -477,7 +477,7 @@
     </p>
     <h4>- Se actúa:</h4>
     <p>
-      Al ﬁnal darles un momento para que cada uno piense de qué maneras puede
+      Al final darles un momento para que cada uno piense de qué maneras puede
       ser más generoso con los que lo rodean. Pedirles que elĳan una o dos
       personas con las que tienen que crecer en generosidad y que se comprometan
       a hacer cosas concretas por ellos en la semana. Los que quieran pueden
@@ -502,7 +502,7 @@
       <li>El compartir entre los Rastreadores / Hogueras es…</li>
       <li>Por eso, creo que necesito seguir trabajando con ellos en…</li>
     </ul>
-    <h4>- Reﬂexión:</h4>
+    <h4>- Reflexión:</h4>
     <p>
       <em>Escuchar la siguiente canción “Hacer un puente” de La Franela</em>
     </p>
