--- a/src/03-afectividad.html
+++ b/src/03-afectividad.html
@@ -91,7 +91,7 @@
     </p>
     <p>
       En síntesis la propuesta pedagógica de Don Bosco, comprende la relevancia
-      de educar afec- tivamente para obtener mejores resultados pedagógicos y
+      de educar afectivamente para obtener mejores resultados pedagógicos y
       sociales.
     </p>
     <h2>ALGUNAS COSAS CLARAS</h2>
@@ -108,7 +108,7 @@
     <p>
       La relación que hace posible la labor educativa no es la autoridad como
       fuerza impositiva, sino el afecto, la amistad. La auténtica relación se
-      establece de corazón a corazón. Dice Don Bos- co…” que los jóvenes no sean
+      establece de corazón a corazón. Dice Don Bosco…” que los jóvenes no sean
       solamente amados, si no que se den cuenta de que se les ama”.
     </p>
     <p>
@@ -123,7 +123,7 @@
     </p>
     <p>
       Exige la razón, base de todo amor humano, que también este hecho de
-      adaptación y de inte- ligente comprensión.
+      adaptación y de inteligente comprensión.
     </p>
     <p>
       Incluye también el afecto, la expresión externa y visible del corazón.
@@ -170,7 +170,7 @@
       El amor es un sentimiento y como tal imposible de explicar, de definir.
       Podremos los hombres darle algunas características o tributos a este
       sentimiento pero no lo podremos enmarcar en una definición y aunque es
-      universal, es muy personal y debemos sentirlo cada uno de noso- tros para
+      universal, es muy personal y debemos sentirlo cada uno de nosotros para
       poder conocerlo y entenderlo.
     </p>
     <h2>ENTENDIÉNDOLOS:</h2>
@@ -261,13 +261,13 @@
       que se expresan a veces violentamente, cerrándose y aislándose, repitiendo
       situaciones familiares. También sentimientos de cariño, amistad, amor,
       etc., aparecen amistades íntimas, noviazgos. En la medida que tengamos
-      confianza y nos animemos a compartir nuestros sentimientos, segura- mente
+      confianza y nos animemos a compartir nuestros sentimientos, seguramente
       crecerá el afecto y la unidad en el grupo.
     </p>
     <p>
       Solos no podemos superar todas las situaciones que se nos presentan, no
       hace falta esperar a una crisis para pedir ayuda. Es necesario que
-      contribuyamos para que el grupo sea un ámbi- to donde todos nos sintamos
+      contribuyamos para que el grupo sea un ámbito donde todos nos sintamos
       cómodos y podamos expresarnos con afecto.
     </p>
     <p>
@@ -335,14 +335,14 @@
     <h4>- Orientación:</h4>
     <p>
       Identificar cuáles son los sentimientos que se producen al representar a
-      otra persona y/o co- locándose en un rol y lugar distinto al de ellos
+      otra persona y/o colocándose en un rol y lugar distinto al de ellos
       mismos.
     </p>
     <h4>- Actividad:</h4>
     <p>
       Tener construida una lista de situaciones conflictivas y lo más reales
       posible, en la que se pongan en juego los sentimientos. (Es probable que
-      no haya que inventar mucho sino aprove- char las que existen).
+      no haya que inventar mucho sino aprovechar las que existen).
     </p>
     <p>
       Tener también tarjetas para cada uno de los chicos con un rol determinado.
@@ -458,7 +458,7 @@
       Una forma de distinguir estas actitudes es preguntarse si lo mismo que
       decimos de alguien cuando no está, lo diríamos en su presencia. O también,
       si fuimos capaces de hablar de aguien en su ausencia, cuando lo veamos
-      decírselo personalmente. Si bien no es la mejor solu- ción, al menos ayuda
+      decírselo personalmente. Si bien no es la mejor solución, al menos ayuda
       a ser auténticos y no relacionarnos con “caretas”.
     </p>
     <p>
@@ -476,7 +476,7 @@
     <p>
       Solos no podemos superar todas las situaciones que se nos presentan, no
       hace falta esperar a una crisis para pedir ayuda. Es necesario que
-      contribuyamos para que el grupo sea un ámbi- to donde todos nos sintamos
+      contribuyamos para que el grupo sea un ámbito donde todos nos sintamos
       cómodos y podamos expresarnos con afecto.
     </p>
     <p>
@@ -577,13 +577,13 @@
       que se expresan a veces violentamente, cerrándose y aislándose, repitiendo
       situaciones familiares. También sentimientos de cariño, amistad, amor,
       etc., aparecen amistades íntimas, noviazgos. En la medida que tengamos
-      confianza y nos animemos a compartir nuestros sentimientos, segura- mente
+      confianza y nos animemos a compartir nuestros sentimientos, seguramente
       crecerá el afecto y la unidad en el grupo.
     </p>
     <p>
       Solos no podemos superan todas las situaciones que se nos presentan, no
       hace falta esperar a una crisis para pedir ayuda. Es necesario que
-      contribuyamos para que el grupo sea un ámbi- to donde todos nos sintamos
+      contribuyamos para que el grupo sea un ámbito donde todos nos sintamos
       cómodos y podamos expresarnos con afecto.
     </p>
     <p>
@@ -633,13 +633,13 @@
     <h4>- Orientación:</h4>
     <p>
       La idea de esta actividad es indagar acerca de las experiencias que han
-      tenido o que recien- temente hayan pasado los Rastreadores Hogueras
+      tenido o que recientemente hayan pasado los Rastreadores Hogueras
       respecto al noviazgo.
     </p>
     <h4>- Actividad:</h4>
     <p>Motivar escuchando la canción “Somos novios”</p>
     <div class="verse">
-      <strong>Somos novios (Luis Miguel- Romance)</strong>
+      <strong>Somos novios (Luis MiguelRomance)</strong>
       <p>
         Somos novios, pues los dos sentimos mutuo amor profundo y con eso ya
         ganamos lo más grande de este mundo.<br />
@@ -660,7 +660,7 @@
     <ul>
       <li>
         ¿Qué te han aportado a tu vida, las relaciones con el otro sexo, las
-        relaciones de noviaz- go, de amistad?
+        relaciones de noviazgo, de amistad?
       </li>
       <li>
         Si tuviste o tenés novio o novia ¿Cuáles han sido las principales
@@ -721,7 +721,7 @@
       </li>
       <li>
         <strong>Tendencia a la idealización:</strong> en lugar de ir creciendo
-        en el descubrimiento del otro, la idea- lización nos hace ver en el
+        en el descubrimiento del otro, la idealización nos hace ver en el
         otro, una persona perfecta, la qué sólo existe en nuestra fantasía.
       </li>
       <li>
@@ -751,7 +751,7 @@
         emocional. Esto impide conocer la madurez del amor. En la experiencia
         del noviazgo, es posible ir superando estos y otros conflictos, viviendo
         el noviazgo como un camino de crecimiento en la relación de pareja, que
-        a su vez, ayuda a ma- durar a cada uno.
+        a su vez, ayuda a madurar a cada uno.
       </li>
     </ul>
     <p>
@@ -977,12 +977,12 @@
     <p>
       Al pasar de la pista de “amigos” a la de “novios”, aclarar que no se trata
       de una etapa, como si una llevara a la otra. Explicar que se trata de
-      cosas con elementos en común pero bien di- ferentes.
+      cosas con elementos en común pero bien diferentes.
     </p>
     <h4>- Reflexión:</h4>
     <p>
       La amistad y el noviazgo son dos cosas diferentes. Si bien es aconsejable
-      tener muchos ami- gos, no sucede lo mismo en cambio con la idea de tener
+      tener muchos amigos, no sucede lo mismo en cambio con la idea de tener
       más de un novio o novia.
     </p>
     <p>
@@ -992,7 +992,7 @@
     </p>
     <p>
       Lo más común es tener amigos del otro sexo, compartir muchas cosas, tener
-      mucha confian- za y esto no tiene nada que ver con la posibilidad de
+      mucha confianza y esto no tiene nada que ver con la posibilidad de
       llegar a ser novios.
     </p>
     <p>
@@ -1094,7 +1094,7 @@
       variadas y a formas distintas de vivirlo. Pero entre todas ellas hay un
       camino que nos ayuda a vivir la sxualidad como proceso de crecimiento; hay
       una verdad a la cual aferrarse en medio de tantos mensajes confusos; hay
-      una “vida” que es posible si respetamos este proceso de madura- ción. Que
+      una “vida” que es posible si respetamos este proceso de maduración. Que
       nuestra sexualidad sea vivida siempre en positivo.
     </p>
     <p>
@@ -1137,7 +1137,7 @@
       “Antes que lo haga con otra, que lo haga conmigo”. Puede tener también
       otras motivaciones como desear afirmar su poder de conquista y seducción,
       de revlorizarse ante sus compañeras “Yo también puedo”, como una forma de
-      fortalecer su autono- mía y libertad respecto de la autoridad familiar o
+      fortalecer su autonomía y libertad respecto de la autoridad familiar o
       de suplir la carencia de afecto en su familia.
     </p>
     <p>
@@ -1152,7 +1152,7 @@
     </p>
     <p>
       penetración destructiva, a la falta de cariño y ternura del muchacho;
-      desea y necesita com- prensión, caricia, afecto y encuentra un adolescente
+      desea y necesita comprensión, caricia, afecto y encuentra un adolescente
       violento.
     </p>
     <p>
@@ -1187,7 +1187,7 @@
     </p>
     <h5>Placer y procreación:</h5>
     <p>
-      Hay una tendencia a separar cuerpo- espíritu-sexo -amor, placer sexual-
+      Hay una tendencia a separar cuerpoespíritu-sexo -amor, placer sexual-
       placer espiritual, y a quedarse con una de las partes de cada dupla. Así
       la sexualidad se vive como fractura, como conflicto permanente, como
       infelicidad. Nos equivocamos si separamos cosas que en realidad van
@@ -1270,13 +1270,13 @@
     </p>
     <p>
       Así se entendió durante mucho tiempo tener normas en lo sexual, y así se
-      explica que la re- presión hizo reventar la rebeldía contra todo tipo de
+      explica que la represión hizo reventar la rebeldía contra todo tipo de
       normas.
     </p>
     <h2>ACTIVIDAD: CONTINÚA</h2>
     <p>
       Al llegar a la pista de “novios” detenerse un momento mayor y luego de que
-      los chicos mar- quen las frases correspondientes, preguntar:
+      los chicos marquen las frases correspondientes, preguntar:
     </p>
     <ul>
       <li>¿Para qué sirve el noviazgo?</li>
@@ -1348,7 +1348,7 @@
           Sus manos, brazaletes de oro, adornados con piedras de Tarsis. Su
           vientre, un bloque de marfil, todo incrustado de zafiros. Sus piernas,
           columnas de alabastro, asentadas sobre bases de oro puro. Su aspecto
-          es como el Líbano, esbelto como los cedros. Su paladar rebo- sa
+          es como el Líbano, esbelto como los cedros. Su paladar rebosa
           dulzura y todo en él es una delicia. Así es mi amado, así es mi amigo,
           hĳas de Jerusalén.»
         </em>
